--- a/slides/adjectives/pds-to-stan.qmd
+++ b/slides/adjectives/pds-to-stan.qmd
@@ -49,7 +49,7 @@ PDS automates the core translation while leaving room for statistical expertise
 
 ## What PDS produces
 
-PDS outputs a **kernel model**—the semantic core from lexical/compositional semantics
+PDS outputs what we term a *kernel model*—the semantic core that corresponds directly to the lexical and compositional semantics. This kernel can in principle be augmented with other components: random effects, hierarchical priors, and other statistical machinery, but the current implementation focuses on producing just the semantic kernel.
 
 ::: {.fragment}
 ### Example: Kernel vs Full Model
@@ -69,9 +69,9 @@ model {
 **Full Model:**
 ```stan {code-line-numbers="2,5"}
 model {
-  w ~ normal(0.0, 1.0);          // PDS
-  sigma_e ~ beta(2, 10);         // Analyst
-  z_eps ~ std_normal();          // Analyst
+  w ~ normal(0.0, 1.0);          // PDS kernel
+  sigma_e ~ beta(2, 10);         // Analyst-added
+  z_eps ~ std_normal();          // Analyst-added
   target += normal_lpdf(y | w + eps, sigma_e);
 }
 ```
@@ -83,7 +83,7 @@ model {
 
 ## Why Stan?
 
-Stan is a probabilistic programming language designed for statistical inference
+Stan is a probabilistic programming language designed for statistical inference. Unlike general-purpose programming languages, Stan is specialized for stating distributional assumptions that can then be translated to a C++ backend that performs statistical inference–usually, using a form of Markov Chain Monte Carlo (MCMC).
 
 ::: {.incremental}
 - **Declarative**: We specify probability models, not procedures
@@ -113,7 +113,7 @@ model {
 ```
 
 ::: {.fragment}
-**Key insight**: Declarative structure parallels compositional semantics
+**Key insight**: This approach aligns well with our goals: just as formal semantics declares some representation of the semantic content rather than how that representation is used in verifying truth or drawing inferences, Stan declares probabilistic relationships rather than sampling algorithms.
 :::
 
 ---
@@ -217,7 +217,8 @@ parameters {
 ```
 
 ::: {.fragment}
-These means represent our best guess about each item's true degree on its scale—the theoretical degrees that the semantic analysis posits. Crucially, they also represent subjects' uncertainty about these degrees—what unresolved uncertainty do they maintain when they make these guesses?
+These means can be understood as representing our best guess, as researchers, about each item's true degree on its scale---the theoretical degrees that the semantic analysis posits.
+Crucially, they can also be viewed as representing subjects' uncertainty about these degrees---what unresolved uncertainty do they maintain when they make these guesses?
 :::
 
 ---
@@ -333,7 +334,8 @@ This establishes context and asks for Jo's height
 :::
 
 ::: {.fragment style="font-size: 85%;"}
-Note: `getSemantics` retrieves one of the meanings (in the λ-calculus) for the expression it is given as a string of strings.
+Note the use of certain convenience functions.
+For example, `getSemantics` retrieves one of the meanings (in the λ-calculus) for the expression it is given as a string of strings, using the parser implemented at [`Grammar.Parser`](https://juliangrove.github.io/pds/Grammar-Parser.html).
 :::
 
 ---
@@ -377,7 +379,7 @@ $$\ct{max}(λd.\ct{height}(i^{\prime})(j) ≥ d)$$
 
 ## delta-rules: What are they?
 
-delta-rules are partial functions that simplify terms while preserving meaning
+delta-rules enable different semantic computations while preserving semantic equivalence. The formalism is strongly normalizing and confluent, so the order of rule application doesn't affect the final result—a crucial property that ensures our semantic theory remains consistent.
 
 ::: {.incremental}
 - Type: `Term -> Maybe Term`
@@ -425,43 +427,59 @@ This extracts the unique degree satisfying the inequality
 
 ## delta-reduction walkthrough
 
-Starting term:
+Having seen the PDS code for degree questions, we now trace through how delta-rules transform these complex λ-terms into forms suitable for Stan compilation.
+
+For degree questions like *how tall is Jo?*, the compositional semantics produces:
 $$\ct{max}(λd.\ct{height}(i^{\prime})(j) ≥ d)$$
 
 ::: {.fragment}
 Apply `indices` rule to extract height:
 $$\ct{max}(λd.h ≥ d)$$
-where $h$ is Jo's actual height
+where $h$ represents Jo's actual height at index $i$
 :::
 
 ::: {.fragment}
-Apply max extraction:
+Apply max extraction using the following delta-rule:
 $$h$$
+This final form directly corresponds to the Stan parameter we need to infer—the degree on the height scale.
 :::
 
 ---
 
 ## Key transformations
 
+The challenge is translating abstract semantic computations into Stan's parameter space. This translation embodies (some of) our linking hypothesis between semantic competence and performance.
+
 ::: {.incremental}
-1. **Degree questions → Parameter inference**
-   - Questions about degrees become Stan parameters to infer
+1. **Degree extraction becomes parameter inference**
+   - $\ct{max}(λd.\ct{height}(i)(j) ≥ d)$ → Infer parameter `height_jo`
+   - The unique degree satisfying the equation becomes a parameter to estimate
 
-2. **Functions → Arrays**
-   - $\ct{height} : \iota \to e \to r$ becomes `height[person]`
+2. **Functions become arrays**
+   - $\ct{height} : \iota \to e \to r$ → Array `height[person]`
+   - Function application → Array indexing
 
-3. **Monadic structure → Target**
-   - `Return` values become parameters or data
-   - Bind operations become likelihood statements
+3. **Propositions become probabilities**
+   - Truth values → Real numbers in [0,1]
+   - Logical operations → Probabilistic operations
+
+4. **The monad becomes Stan's target**
+   - The $\Do$-notation structures sequential computation
+   - This determines Stan's log probability
 :::
 
 ---
 
 ## PDS kernel output
 
+The PDS system outputs the following kernel model:
+
 ```stan
 model {
+  // FIXED EFFECTS
   w ~ normal(0.0, 1.0);
+  
+  // LIKELIHOOD
   target += normal_lpdf(y | w, sigma);
 }
 ```
@@ -471,29 +489,34 @@ model {
 Actual PDS output: `model { w ~ normal(0.0, 1.0); target += normal_lpdf(y | w, sigma); }`
 :::
 
-- `w` = degree parameter
-- Prior on degrees + likelihood of observations
+This is the semantic core—it captures the essential degree-based semantics where `w` represents the degree on the height scale.
 :::
 
 ---
 
 ## From kernel to full model
 
-```stan {code-line-numbers="2,7"}
+The full model with analyst augmentations looks like:
+
+```stan {code-line-numbers="6,13"}
 model {
-  mu_guess ~ normal(0.0, 1.0);           // PDS kernel
-  sigma_epsilon_guess ~ exponential(1);  // Analyst
-  sigma_e ~ beta(2, 10);                 // Analyst
-  z_epsilon_guess ~ std_normal();        // Analyst
+  // PRIORS (analyst-added)
+  sigma_epsilon_guess ~ exponential(1);
+  sigma_e ~ beta(2, 10);
   
-  y ~ normal(mu_guess[item] +            // PDS kernel
-             epsilon_guess[participant], // + analyst
-             sigma_e);                   
+  // FIXED EFFECTS (PDS kernel)
+  mu_guess ~ normal(0.0, 1.0);
+  
+  // RANDOM EFFECTS (analyst-added)
+  z_epsilon_guess ~ std_normal();
+  
+  // LIKELIHOOD (PDS kernel with modifications)
+  y[i] ~ normal(mu_guess[item[i]] + epsilon_guess[participant[i]], sigma_e);
 }
 ```
 
 ::: {.fragment}
-The kernel captures semantic content; augmentations handle experimental realities
+Lines 6 and 13 (highlighted) show the kernel model from PDS. The unhighlighted portions add statistical machinery for real data: hierarchical priors, random effects, and indexed parameters.
 :::
 
 ---
@@ -502,7 +525,7 @@ The kernel captures semantic content; augmentations handle experimental realitie
 
 ## From degrees to likelihood judgments
 
-New question: "How likely is it that Jo is tall?"
+Our next model addresses how speakers reason about the likelihood that gradable adjectives apply. "How likely (is it) that Jo is tall?"
 
 ::: {.incremental}
 - Not asking for a degree
@@ -670,7 +693,7 @@ transformed parameters {
                           epsilon_mu_guess[participant[i]];
     mu_guess[i] = inv_logit(threshold_logit);
     
-    // PDS KERNEL: P(adjective applies)
+    // KEY SEMANTIC COMPUTATION: P(adjective applies)
     response_rel[i] = 1 - normal_cdf(d[item[i]] | 
                                      mu_guess[i], 
                                      sigma_guess);
@@ -689,7 +712,7 @@ transformed parameters {
 
 ```{style="text-align: center;"}
 Semantic theory (λ-terms)
-     ↓ Delta rules
+     ↓ delta-rules
 Simplified form
      ↓ Compilation
 Kernel model (Stan)
@@ -703,9 +726,9 @@ Full statistical model
 
 ::: {.incremental}
 - **delta-rules** bridge theory and computation
-- **Kernel models** isolate semantic content
-- **Augmentation** adds statistical machinery
-- **Compilation** embodies linking hypotheses
+- **Kernel models** isolate semantic content from statistical machinery
+- **This distinction is crucial**: PDS automates the translation from compositional semantics to the core statistical model, while leaving room for analysts to add domain-specific statistical structure
+- **Compilation** embodies our linking hypothesis between semantic competence and performance
 :::
 
 ---
@@ -713,10 +736,10 @@ Full statistical model
 ## What we've covered
 
 ::: {.incremental}
-- **Degree inference** from norming questions
-- **Vagueness** as threshold uncertainty
-- **Likelihood judgments** via probabilistic computation
-- **Full delta-rules** when applying transformations
+- **Degree inference** from norming questions using degree-argument adjectives
+- **Vagueness** as threshold uncertainty in gradable adjectives
+- **Likelihood judgments** via probabilistic computation with `normal_cdf`
+- **Full delta-rule walkthroughs** showing how complex λ-terms become Stan parameters
 :::
 
 ---
